removed body margin to ensure that subtle branding extended full width on mobile

--- a/styles/main.less
+++ b/styles/main.less
@@ -271,7 +271,7 @@ b, strong {
 @media screen and (max-width: 490px) {
   #populr > .mobile-reset();
 
-  body {
+  #pop {
     padding: 10px;
   }
 
